--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -174,7 +174,7 @@ citecolor=MidnightBlue }
 %-------------------------------------------------------------------------------
 
 % TODO echten Titel ersinnen
-\input{Inhalt/Fazit}
+%\input{Inhalt/Fazit}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
