--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -109,7 +109,7 @@ Gruppe stellen die Experten dar, die Fragen zu ihren jeweiligen Fachgebieten
 erhalten haben (vgl. \cite{Tetlock}, S.~242). Weniger qualifiziert sind die 
 \glqq{Dilettanten}\grqq (\emph{dilettantes}), Experten, die jedoch Fragen
 beantwortet haben, die nicht zu ihrem Spezialgebiet gehören. Die Dilettanten
-gaben an, dass sie sich mit Hilfe qualititativ hochwertiger Quellen
+gaben an, dass sie sich mit Hilfe qualitativ hochwertiger Quellen
 (\emph{Economist}, \emph{Wall Street Journal}, \emph{New York Times} etc.) über
 Themen außerhalb ihrer Fachgebiete informieren (vgl. \cite{Tetlock}, S.~56).
 Die Gruppe mit der geringsten Qualifikation waren Studenten, die die Übungen
