--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -171,7 +171,7 @@ Einsichten liefern (vgl. \cite{Tetlock}, S.~8).
 
 \subsection{Tetlocks Forecasting Exercises}
 
-Für die empirischen Korresponenztests führten Tetlock und sein Team eine Reihe
+Für die empirischen Korrespondenztests führten Tetlock und sein Team eine Reihe
 von Forecasting Exercises mit Experten durch. Diese Expertenbefragungen
 wurden bereits in Teil~\ref{part:Schw_Vorhersagen} thematisiert und sollen nun
 detaillierter erläutert werden.
