--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -211,8 +211,8 @@ egoistische Handlung und birgt langfristig viel Konfliktpotential. Personen, die
 Harmonie aufrechterhalten wollen, werden dem Druck nachgeben. 
 
 Nicht alle Gruppen oder Kulturen haben die gleichen Probleme mit kollektiver Identität.
-Manche Gruppen können mit evidenzbasierten Methoden besser umgehen als anderere.
-Zudem können die Gefahren amgemildert werden, indem loyale und ideologisch motivierte
+Manche Gruppen können mit evidenzbasierten Methoden besser umgehen als andere.
+Zudem können die Gefahren abgemildert werden, indem loyale und ideologisch motivierte
 Personen mit der Durchführung beauftragt werden. Diese sind vertraut mit den
 Besonderheiten und Tabus einer Weltanschauung und können diese umgehen.
 
